--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.firebase:firebase-ads:9.0.0' // stick with v9.0.0 (there's a bug on 9.4.0)
+    compile project(':freshjokes')
 }
 
 apply plugin: 'com.google.gms.google-services'
