--- a/jokedisplay/build.gradle
+++ b/jokedisplay/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.damian.builditbigger"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -23,9 +22,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebase:firebase-ads:9.0.0' // stick with v9.0.0 (there's a bug on 9.4.0)
-    compile project(':freshjokes')
-    compile project(':jokedisplay')
 }
-
-apply plugin: 'com.google.gms.google-services'
