--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebase:firebase-ads:9.0.0' // stick with v9.0.0 (there's a bug on 9.4.0)
+    // stick with v9.0.0 (there's a bug on 9.4.0)
     compile project(':freshjokes')
     compile project(':jokedisplay')
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.google.firebase:firebase-ads:9.0.0'
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
+
 
 apply plugin: 'com.google.gms.google-services'
