--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,8 @@ dependencies {
     compile project(':freshjokes')
     compile project(':jokedisplay')
     compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.google.firebase:firebase-ads:9.0.0'
+    freeCompile 'com.google.firebase:firebase-ads:9.0.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
-
 
 apply plugin: 'com.google.gms.google-services'
